2010-10-18  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	util/pandora_manage.pl: Splitted in 4 parameters the CLI module creation
	parameter: create_data_module, create_network_module, create_snmp_module, 
	create_plugin_module

2010-10-15  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Added support for recon scripts.

2010-10-14  Sancho Lerena <slerena@artica.es>

	* PandoraFMS/Core.pm: Fixed bug #3085249 about empty extra_macros hash.

	* util/pandora_backup.sh: Fixed bug #3080826 about backup of links, now
	are using -h parameter on tar to get the real file instead the link.

	* util/pandora_manage.pl: Removed some warnings.

2010-10-13  Sancho Lerena <slerena@artica.es>

    * Core.pm: Force XML::Simple to use XML::Parser instead SAX to manage XML
    due a bug processing some XML with blank spaces.

    * DataServer.pm: Checking for BADXML is 2 times with 2 secs of delay now. 
    Aditional check before deleting / procesing XML.

    * pandora_server: Added handle of BadXML error to avoid see "unhandled" 
    errors on log, and set to verbose level 2.

2010-10-07  Sancho Lerena <slerena@artica.es>

    * conf/pandora_server.conf: Removed multicast options

    * Makefile.PL: Removed need for dependencies on Mail::Sendmail
    and Traceroute::PurePerl, now are included in the Pandora FMS
    distribution.

    * lib/PandoraFMS/Config.pm: Removed options for multicast

    * lib/PandoraFMS/Traceroute.pm, 
      lib/PandoraFMS/Sendmail.pm,
      lib/PandoraFMS/Traceroute/PurePerl.pm: Now included on Pandora FMS
    distribution, this will help to do easier installs of Pandora, because
    that packages was difficult to build/install in different distros.

    * lib/PandoraFMS/Core.pm: Removed the old multicast-on change enterprise
    feature, not used/supported anymore.

    * lib/PandoraFMS/ReconServer.pm: Now uses the internal Traceroute Pureperl
    implementation.
