@@ -1,3 +1,9 @@
+2010-10-19  Sergio Martin <sergio.martin@artica.es>
+
+	* lib/PandoraFMS/Core.pm
+	util/pandora_manage.pl: Moved and renamed the module
+	creation from hash function from CLI to Core
+
 2010-10-18  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/DB.pm
